Step 2 move Client to Client.Model

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -379,6 +379,7 @@
     <Compile Include="Business\Builder\PanelSetOrderBuilderLeukemiaLymphoma.cs" />
     <Compile Include="Business\Builder\PanelSetOrderBuilderSummaryReport.cs" />
     <Compile Include="Business\CaseType.cs" />
+    <Compile Include="Business\Client.Model\AthenaPhysicianClientDistribution.cs" />
     <Compile Include="Business\Client.Model\Client.cs" />
     <Compile Include="Business\Client.Model\ClientCollection.cs" />
     <Compile Include="Business\Client.Model\ClientCommunication.cs" />
@@ -395,10 +396,59 @@
     <Compile Include="Business\Client.Model\ClientSupplyOrderCollection.cs" />
     <Compile Include="Business\Client.Model\ClientSupplyOrderDetail.cs" />
     <Compile Include="Business\Client.Model\ClientSupplyOrderDetailCollection.cs" />
+    <Compile Include="Business\Client.Model\ECWPhysicianClientDistribution.cs" />
+    <Compile Include="Business\Client.Model\EPICAndFaxPhysicianClientDistribution.cs" />
+    <Compile Include="Business\Client.Model\EPICPhysicianClientDistribution.cs" />
+    <Compile Include="Business\Client.Model\FaxPhysicianClientDistribution.cs" />
+    <Compile Include="Business\Client.Model\HPV1618ReflexOrderHPVPositive.cs" />
+    <Compile Include="Business\Client.Model\HPV1618ReflexOrderPAPNormalHPVPositive.cs" />
+    <Compile Include="Business\Client.Model\HPV1618StandingOrderHPVPositive.cs" />
+    <Compile Include="Business\Client.Model\HPV1618StandingOrderPAPNormalHPVPositive.cs" />
+    <Compile Include="Business\Client.Model\HPVCompoundStandingOrderRule1.cs" />
+    <Compile Include="Business\Client.Model\HPVCompoundStandingOrderRule2.cs" />
+    <Compile Include="Business\Client.Model\HPVCompoundStandingOrderRule3.cs" />
+    <Compile Include="Business\Client.Model\HPVCompoundStandingOrderRule4.cs" />
+    <Compile Include="Business\Client.Model\HPVCompoundStandingOrderRule5.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule1.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule10.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule11.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule12.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule13.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule14.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule15.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule16.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule2.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule3.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule4.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule5.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule6.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule7.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule8.cs" />
+    <Compile Include="Business\Client.Model\HPVReflexOrderRule9.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrderRule1.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrderRule10.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrderRule11.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrderRule12.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrderRule13.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrderRule2.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrderRule3.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrderRule4.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrderRule5.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrderRule6.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrderRule7.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrderRule8.cs" />
+    <Compile Include="Business\Client.Model\HPVStandingOrderRule9.cs" />
     <Compile Include="Business\Client.Model\LocalPhonePrefix.cs" />
+    <Compile Include="Business\Client.Model\MediTechPhysicianClientDistribution.cs" />
+    <Compile Include="Business\Client.Model\NoHPVStandingOrder.cs" />
     <Compile Include="Business\Client.Model\Physician.cs" />
+    <Compile Include="Business\Client.Model\PhysicianClient.cs" />
+    <Compile Include="Business\Client.Model\PhysicianClientCollection.cs" />
     <Compile Include="Business\Client.Model\PhysicianClientDistribution.cs" />
     <Compile Include="Business\Client.Model\PhysicianClientDistributionCollection.cs" />
+    <Compile Include="Business\Client.Model\PhysicianClientDistributionFactory.cs" />
+    <Compile Include="Business\Client.Model\PhysicianClientDistributionList.cs" />
+    <Compile Include="Business\Client.Model\PhysicianClientDistributionListItem.cs" />
     <Compile Include="Business\Client.Model\PhysicianClientDistributionView.cs" />
     <Compile Include="Business\Client.Model\PhysicianClientName.cs" />
     <Compile Include="Business\Client.Model\PhysicianClientNameCollection.cs" />
@@ -409,6 +459,14 @@
     <Compile Include="Business\Client.Model\PhysicianNameViewCollection.cs" />
     <Compile Include="Business\Client.Model\ProviderClient.cs" />
     <Compile Include="Business\Client.Model\ProviderClientCollection.cs" />
+    <Compile Include="Business\Client.Model\ReflexOrder.cs" />
+    <Compile Include="Business\Client.Model\ReflexOrderCollection.cs" />
+    <Compile Include="Business\Client.Model\ReflexOrderNone.cs" />
+    <Compile Include="Business\Client.Model\ReflexOrderStatus.cs" />
+    <Compile Include="Business\Client.Model\StandingOrder.cs" />
+    <Compile Include="Business\Client.Model\StandingOrderCollection.cs" />
+    <Compile Include="Business\Client.Model\StandingOrderNone.cs" />
+    <Compile Include="Business\Client.Model\StandingOrderNotSet.cs" />
     <Compile Include="Business\ClientOrder.Model\ClientOrder.cs" />
     <Compile Include="Business\ClientOrder.Model\ClientOrder.Validation.cs" />
     <Compile Include="Business\ClientOrder.Model\ClientOrderCollection.cs" />
@@ -455,64 +513,6 @@
     <Compile Include="Business\ClientOrder.Model\UniversalServiceCollection.cs" />
     <Compile Include="Business\ClientOrder.Model\UniversalServiceDefinitions.cs" />
     <Compile Include="Business\ClientOrder.Model\WestGrandFamilyOrderTest.cs" />
-    <Compile Include="Business\Client\AthenaPhysicianClientDistribution.cs" />
-    <Compile Include="Business\Client\ECWPhysicianClientDistribution.cs" />
-    <Compile Include="Business\Client\EPICAndFaxPhysicianClientDistribution.cs" />
-    <Compile Include="Business\Client\EPICPhysicianClientDistribution.cs" />
-    <Compile Include="Business\Client\FaxPhysicianClientDistribution.cs" />
-    <Compile Include="Business\Client\HPV1618ReflexOrderHPVPositive.cs" />
-    <Compile Include="Business\Client\HPV1618ReflexOrderPAPNormalHPVPositive.cs" />
-    <Compile Include="Business\Client\HPV1618StandingOrderHPVPositive.cs" />
-    <Compile Include="Business\Client\HPV1618StandingOrderPAPNormalHPVPositive.cs" />
-    <Compile Include="Business\Client\HPVCompoundStandingOrderRule1.cs" />
-    <Compile Include="Business\Client\HPVCompoundStandingOrderRule2.cs" />
-    <Compile Include="Business\Client\HPVCompoundStandingOrderRule3.cs" />
-    <Compile Include="Business\Client\HPVCompoundStandingOrderRule5.cs" />
-    <Compile Include="Business\Client\HPVCompoundStandingOrderRule4.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule1.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule16.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule10.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule11.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule12.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule13.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule14.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule2.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule15.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule3.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule4.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule5.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule6.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule7.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule8.cs" />
-    <Compile Include="Business\Client\HPVReflexOrderRule9.cs" />
-    <Compile Include="Business\Client\HPVStandingOrderRule1.cs" />
-    <Compile Include="Business\Client\HPVStandingOrderRule10.cs" />
-    <Compile Include="Business\Client\HPVStandingOrderRule11.cs" />
-    <Compile Include="Business\Client\HPVStandingOrderRule12.cs" />
-    <Compile Include="Business\Client\HPVStandingOrderRule13.cs" />
-    <Compile Include="Business\Client\HPVStandingOrderRule2.cs" />
-    <Compile Include="Business\Client\HPVStandingOrderRule3.cs" />
-    <Compile Include="Business\Client\HPVStandingOrderRule4.cs" />
-    <Compile Include="Business\Client\HPVStandingOrderRule5.cs" />
-    <Compile Include="Business\Client\HPVStandingOrderRule6.cs" />
-    <Compile Include="Business\Client\HPVStandingOrderRule7.cs" />
-    <Compile Include="Business\Client\HPVStandingOrderRule8.cs" />
-    <Compile Include="Business\Client\HPVStandingOrderRule9.cs" />
-    <Compile Include="Business\Client\MediTechPhysicianClientDistribution.cs" />
-    <Compile Include="Business\Client\NoHPVStandingOrder.cs" />
-    <Compile Include="Business\Client\PhysicianClient.cs" />
-    <Compile Include="Business\Client\PhysicianClientCollection.cs" />
-    <Compile Include="Business\Client\PhysicianClientDistributionListItem.cs" />
-    <Compile Include="Business\Client\PhysicianClientDistributionList.cs" />
-    <Compile Include="Business\Client\PhysicianClientDistributionFactory.cs" />
-    <Compile Include="Business\Client\ReflexOrder.cs" />
-    <Compile Include="Business\Client\ReflexOrderCollection.cs" />
-    <Compile Include="Business\Client\ReflexOrderNone.cs" />
-    <Compile Include="Business\Client\ReflexOrderStatus.cs" />
-    <Compile Include="Business\Client\StandingOrder.cs" />
-    <Compile Include="Business\Client\StandingOrderCollection.cs" />
-    <Compile Include="Business\Client\StandingOrderNone.cs" />
-    <Compile Include="Business\Client\StandingOrderNotSet.cs" />
     <Compile Include="Business\Common\AmendmentSpellCheckList.cs" />
     <Compile Include="Business\Common\Block.cs" />
     <Compile Include="Business\Common\BlockCollection.cs" />
