Move Billing to Billing.Model Step 2

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -290,6 +290,8 @@
     <Compile Include="Business\Billing.Model\BillingTypeEnum.cs" />
     <Compile Include="Business\Billing.Model\ClientBillingRuleSet.cs" />
     <Compile Include="Business\Billing.Model\CodeableType.cs" />
+    <Compile Include="Business\Billing.Model\CptBillingCodeItem.cs" />
+    <Compile Include="Business\Billing.Model\CptBillingCodeItemCollection.cs" />
     <Compile Include="Business\Billing.Model\CptCode.cs" />
     <Compile Include="Business\Billing.Model\CPTCodeBigHornPrice.cs" />
     <Compile Include="Business\Billing.Model\CPTCodeBZPrice.cs" />
@@ -302,6 +304,7 @@
     <Compile Include="Business\Billing.Model\CPTCodeHRPrice.cs" />
     <Compile Include="Business\Billing.Model\CPTCodeLibPrice.cs" />
     <Compile Include="Business\Billing.Model\CPTCodeMMPrice.cs" />
+    <Compile Include="Business\Billing.Model\CptCodeModifier.cs" />
     <Compile Include="Business\Billing.Model\CPTCodeModifierEnum.cs" />
     <Compile Include="Business\Billing.Model\CPTCodeMVPrice.cs" />
     <Compile Include="Business\Billing.Model\CPTCodeNVPrice.cs" />
@@ -325,6 +328,11 @@
     <Compile Include="Business\Billing.Model\HospitalGlobalBillingRuleSet.cs" />
     <Compile Include="Business\Billing.Model\HospitalSplitAllBillingRuleSet.cs" />
     <Compile Include="Business\Billing.Model\HospitalSplitProfessionalBillingRuleSet.cs" />
+    <Compile Include="Business\Billing.Model\ICD9BillingCode.cs" />
+    <Compile Include="Business\Billing.Model\ICD9BillingCodeCollection.cs" />
+    <Compile Include="Business\Billing.Model\ICDCodeList.cs" />
+    <Compile Include="Business\Billing.Model\InsuranceType.cs" />
+    <Compile Include="Business\Billing.Model\InsuranceTypeCollection.cs" />
     <Compile Include="Business\Billing.Model\MedicareCodeCollection.cs" />
     <Compile Include="Business\Billing.Model\NonProviderBasedClinicBillingRuleSet.cs" />
     <Compile Include="Business\Billing.Model\PanelSetCptCode.cs" />
@@ -338,17 +346,9 @@
     <Compile Include="Business\Billing.Model\RuleValueAny.cs" />
     <Compile Include="Business\Billing.Model\RuleValueBoolean.cs" />
     <Compile Include="Business\Billing.Model\RuleValueString.cs" />
+    <Compile Include="Business\Billing.Model\TypingCptCodeList.cs" />
+    <Compile Include="Business\Billing.Model\TypingCptCodeListItem.cs" />
     <Compile Include="Business\Billing.Model\YellowstoneParkBillingRuleSet.cs" />
-    <Compile Include="Business\Billing\CptBillingCodeItem.cs" />
-    <Compile Include="Business\Billing\CptBillingCodeItemCollection.cs" />
-    <Compile Include="Business\Billing\CptCodeModifier.cs" />
-    <Compile Include="Business\Billing\ICD9BillingCode.cs" />
-    <Compile Include="Business\Billing\ICD9BillingCodeCollection.cs" />
-    <Compile Include="Business\Billing\ICDCodeList.cs" />
-    <Compile Include="Business\Billing\InsuranceType.cs" />
-    <Compile Include="Business\Billing\InsuranceTypeCollection.cs" />
-    <Compile Include="Business\Billing\TypingCptCodeList.cs" />
-    <Compile Include="Business\Billing\TypingCptCodeListItem.cs" />
     <Compile Include="Business\Builder\PanelSetOrderBuilder.cs" />
     <Compile Include="Business\Builder\PanelSetOrderBuilderEgfr.cs" />
     <Compile Include="Business\Builder\PanelSetOrderBuilderFactory.cs" />
