Move Domain.Billing to Billing.Model

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -619,30 +619,20 @@
     <Compile Include="Business\Domain\Billing\BillableObjectTechnicalOnlyAutopsy.cs" />
     <Compile Include="Business\Domain\Billing\BillableObjectThinPrepPap.cs" />
     <Compile Include="Business\Domain\Billing\BillableObjectThinPrepPapMedicare.cs" />
-    <Compile Include="Business\Domain\Billing\BillingChangeResult.cs" />
     <Compile Include="Business\Domain\Billing\BillingComponent.cs" />
     <Compile Include="Business\Domain\Billing\BillingComponentGlobal.cs" />
     <Compile Include="Business\Domain\Billing\BillingComponentNoBilling.cs" />
     <Compile Include="Business\Domain\Billing\BillingComponentProfessionalOnly.cs" />
     <Compile Include="Business\Domain\Billing\BillingComponentTechnicalOnly.cs" />
-    <Compile Include="Business\Domain\Billing\BillingReport.cs" />
-    <Compile Include="Business\Domain\Billing\BillingReportCollection.cs" />
-    <Compile Include="Business\Domain\Billing\BillingRule.cs" />
-    <Compile Include="Business\Domain\Billing\BillingSpecimen.cs" />
-    <Compile Include="Business\Domain\Billing\BillingSpecimenCollection.cs" />
+    <Compile Include="Business\Domain\Billing\DomainBillingRule.cs" />
     <Compile Include="Business\Domain\Billing\BillToEnum.cs" />
     <Compile Include="Business\Domain\Billing\ClientBillingRule.cs" />
-    <Compile Include="Business\Domain\Billing\FeeTypeLinq.cs" />
     <Compile Include="Business\Domain\Billing\GlobalBillingRule.cs" />
-    <Compile Include="Business\Domain\Billing\InsuranceTypeLinq.cs" />
     <Compile Include="Business\Domain\Billing\LSEIHCStainSpecimen.cs" />
-    <Compile Include="Business\Domain\Billing\PatientType.cs" />
-    <Compile Include="Business\Domain\Billing\ProfessionalCharge.cs" />
     <Compile Include="Business\Domain\Billing\PSABillingDocument.cs" />
     <Compile Include="Business\Domain\Billing\StainSpecimen.cs" />
     <Compile Include="Business\Domain\Billing\StainSpecimenCollection.cs" />
     <Compile Include="Business\Domain\Billing\SurgicalStainSpecimen.cs" />
-    <Compile Include="Business\Domain\Billing\TypingCptCode.cs" />
     <Compile Include="Business\Domain\CaseNotesKey.cs" />
     <Compile Include="Business\Domain\CaseNotesKeyCollection.cs" />
     <Compile Include="Business\Domain\CaseNotesKeyNameEnum.cs" />
