Finish moving Domain.Billing to Billing.Model

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -280,7 +280,25 @@
     <Compile Include="Business\BaseData.cs" />
     <Compile Include="Business\BaseItem.cs" />
     <Compile Include="Business\BaseListItem.cs" />
+    <Compile Include="Business\Billing.Model\BillableObject.cs" />
+    <Compile Include="Business\Billing.Model\BillableObjectFactory.cs" />
+    <Compile Include="Business\Billing.Model\BillableObjectInHouseMolecular.cs" />
+    <Compile Include="Business\Billing.Model\BillableObjectKRASWithBRAFReflex.cs" />
+    <Compile Include="Business\Billing.Model\BillableObjectLeukemiaLymphoma.cs" />
+    <Compile Include="Business\Billing.Model\BillableObjectMedicareProstateNeedleBiopsy.cs" />
+    <Compile Include="Business\Billing.Model\BillableObjectMountainViewNeo.cs" />
+    <Compile Include="Business\Billing.Model\BillableObjectStains.cs" />
+    <Compile Include="Business\Billing.Model\BillableObjectSurgicalPathology.cs" />
+    <Compile Include="Business\Billing.Model\BillableObjectTechnicalOnly.cs" />
+    <Compile Include="Business\Billing.Model\BillableObjectTechnicalOnlyAutopsy.cs" />
+    <Compile Include="Business\Billing.Model\BillableObjectThinPrepPap.cs" />
+    <Compile Include="Business\Billing.Model\BillableObjectThinPrepPapMedicare.cs" />
+    <Compile Include="Business\Billing.Model\BillingComponent.cs" />
     <Compile Include="Business\Billing.Model\BillingComponentEnum.cs" />
+    <Compile Include="Business\Billing.Model\BillingComponentGlobal.cs" />
+    <Compile Include="Business\Billing.Model\BillingComponentNoBilling.cs" />
+    <Compile Include="Business\Billing.Model\BillingComponentProfessionalOnly.cs" />
+    <Compile Include="Business\Billing.Model\BillingComponentTechnicalOnly.cs" />
     <Compile Include="Business\Billing.Model\BillingRule.cs" />
     <Compile Include="Business\Billing.Model\BillingRuleCollection.cs" />
     <Compile Include="Business\Billing.Model\BillingRuleMatch.cs" />
@@ -288,6 +306,8 @@
     <Compile Include="Business\Billing.Model\BillingRuleSet.cs" />
     <Compile Include="Business\Billing.Model\BillingRuleSetCollection.cs" />
     <Compile Include="Business\Billing.Model\BillingTypeEnum.cs" />
+    <Compile Include="Business\Billing.Model\BillToEnum.cs" />
+    <Compile Include="Business\Billing.Model\ClientBillingRule.cs" />
     <Compile Include="Business\Billing.Model\ClientBillingRuleSet.cs" />
     <Compile Include="Business\Billing.Model\CodeableType.cs" />
     <Compile Include="Business\Billing.Model\CptBillingCodeItem.cs" />
@@ -319,11 +339,13 @@
     <Compile Include="Business\Billing.Model\CPTCodeWPPrice.cs" />
     <Compile Include="Business\Billing.Model\CPTCodeWYPrice.cs" />
     <Compile Include="Business\Billing.Model\CPTYPPrice.cs" />
+    <Compile Include="Business\Billing.Model\DomainBillingRule.cs" />
     <Compile Include="Business\Billing.Model\FeeSchedule.cs" />
     <Compile Include="Business\Billing.Model\FeeScheduleCollection.cs" />
     <Compile Include="Business\Billing.Model\FeeScheduleCosmetic.cs" />
     <Compile Include="Business\Billing.Model\FeeScheduleEnum.cs" />
     <Compile Include="Business\Billing.Model\GCodeDefinitions.cs" />
+    <Compile Include="Business\Billing.Model\GlobalBillingRule.cs" />
     <Compile Include="Business\Billing.Model\GlobalBillingRuleSet.cs" />
     <Compile Include="Business\Billing.Model\HospitalGlobalBillingRuleSet.cs" />
     <Compile Include="Business\Billing.Model\HospitalSplitAllBillingRuleSet.cs" />
@@ -333,6 +355,7 @@
     <Compile Include="Business\Billing.Model\ICDCodeList.cs" />
     <Compile Include="Business\Billing.Model\InsuranceType.cs" />
     <Compile Include="Business\Billing.Model\InsuranceTypeCollection.cs" />
+    <Compile Include="Business\Billing.Model\LSEIHCStainSpecimen.cs" />
     <Compile Include="Business\Billing.Model\MedicareCodeCollection.cs" />
     <Compile Include="Business\Billing.Model\NonProviderBasedClinicBillingRuleSet.cs" />
     <Compile Include="Business\Billing.Model\PanelSetCptCode.cs" />
@@ -342,10 +365,14 @@
     <Compile Include="Business\Billing.Model\PQRSCode.cs" />
     <Compile Include="Business\Billing.Model\PQRSCodeCollection.cs" />
     <Compile Include="Business\Billing.Model\PQRSCodeDefinitions.cs" />
+    <Compile Include="Business\Billing.Model\PSABillingDocument.cs" />
     <Compile Include="Business\Billing.Model\RuleValue.cs" />
     <Compile Include="Business\Billing.Model\RuleValueAny.cs" />
     <Compile Include="Business\Billing.Model\RuleValueBoolean.cs" />
     <Compile Include="Business\Billing.Model\RuleValueString.cs" />
+    <Compile Include="Business\Billing.Model\StainSpecimen.cs" />
+    <Compile Include="Business\Billing.Model\StainSpecimenCollection.cs" />
+    <Compile Include="Business\Billing.Model\SurgicalStainSpecimen.cs" />
     <Compile Include="Business\Billing.Model\TypingCptCodeList.cs" />
     <Compile Include="Business\Billing.Model\TypingCptCodeListItem.cs" />
     <Compile Include="Business\Billing.Model\YellowstoneParkBillingRuleSet.cs" />
@@ -606,33 +633,6 @@
     <Compile Include="Business\Document\WordDocDocument.cs" />
     <Compile Include="Business\Document\XpsCaseDocument.cs" />
     <Compile Include="Business\Domain\AccessionDate.cs" />
-    <Compile Include="Business\Domain\Billing\BillableObject.cs" />
-    <Compile Include="Business\Domain\Billing\BillableObjectFactory.cs" />
-    <Compile Include="Business\Domain\Billing\BillableObjectInHouseMolecular.cs" />
-    <Compile Include="Business\Domain\Billing\BillableObjectKRASWithBRAFReflex.cs" />
-    <Compile Include="Business\Domain\Billing\BillableObjectLeukemiaLymphoma.cs" />
-    <Compile Include="Business\Domain\Billing\BillableObjectMedicareProstateNeedleBiopsy.cs" />
-    <Compile Include="Business\Domain\Billing\BillableObjectMountainViewNeo.cs" />
-    <Compile Include="Business\Domain\Billing\BillableObjectStains.cs" />
-    <Compile Include="Business\Domain\Billing\BillableObjectSurgicalPathology.cs" />
-    <Compile Include="Business\Domain\Billing\BillableObjectTechnicalOnly.cs" />
-    <Compile Include="Business\Domain\Billing\BillableObjectTechnicalOnlyAutopsy.cs" />
-    <Compile Include="Business\Domain\Billing\BillableObjectThinPrepPap.cs" />
-    <Compile Include="Business\Domain\Billing\BillableObjectThinPrepPapMedicare.cs" />
-    <Compile Include="Business\Domain\Billing\BillingComponent.cs" />
-    <Compile Include="Business\Domain\Billing\BillingComponentGlobal.cs" />
-    <Compile Include="Business\Domain\Billing\BillingComponentNoBilling.cs" />
-    <Compile Include="Business\Domain\Billing\BillingComponentProfessionalOnly.cs" />
-    <Compile Include="Business\Domain\Billing\BillingComponentTechnicalOnly.cs" />
-    <Compile Include="Business\Domain\Billing\DomainBillingRule.cs" />
-    <Compile Include="Business\Domain\Billing\BillToEnum.cs" />
-    <Compile Include="Business\Domain\Billing\ClientBillingRule.cs" />
-    <Compile Include="Business\Domain\Billing\GlobalBillingRule.cs" />
-    <Compile Include="Business\Domain\Billing\LSEIHCStainSpecimen.cs" />
-    <Compile Include="Business\Domain\Billing\PSABillingDocument.cs" />
-    <Compile Include="Business\Domain\Billing\StainSpecimen.cs" />
-    <Compile Include="Business\Domain\Billing\StainSpecimenCollection.cs" />
-    <Compile Include="Business\Domain\Billing\SurgicalStainSpecimen.cs" />
     <Compile Include="Business\Domain\CaseNotesKey.cs" />
     <Compile Include="Business\Domain\CaseNotesKeyCollection.cs" />
     <Compile Include="Business\Domain\CaseNotesKeyNameEnum.cs" />
